# BGTool

./: README.md  dictionary.txt  pyproject.toml
dokumentaatio/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md
src/: corrector.py  distance.py  main.py  trie.py
src/tests/: test_corrector.py  test_distance.py  test_integration.py  test_trie.py  trie_test.py
