[tool.poetry]
name = "bgtool"
version = "0.1.0"
description = ""
authors = ["Julia <j.roukala95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
