[tool.poetry]
name = "bgtool"
version = "0.1.0"
description = ""
authors = ["Julia <j.roukala95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
autopep8 = "^2.3.2"
pytest = "^8.4.1"
coverage = "^7.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
